--- a/index.html
+++ b/index.html
@@ -17,18 +17,17 @@
 
 <hr>
 <h3> About Me: </h3> 
-I am a third year PhD student and Teaching Assistant in the Department of Mathematics, Statistics, and Computer Science at the University of Illinois at Chicago. For Fall Semester 2022, I am at the <a href=https://www.him.uni-bonn.de/programs/current-trimester-program/spectral-methods/description/>Hausdorff Research Institute Trimester</a> on Tensor-Triangular Geometry. When I'm not doing math, I enjoy watching movies, playing basketball, and discovering new music.
+I am a fourth year PhD student and Teaching Assistant in the Department of Mathematics at Johns Hopkins. For Fall Semester 2022, I was at the <a href=https://www.him.uni-bonn.de/programs/current-trimester-program/spectral-methods/description/>Hausdorff Research Institute Trimester</a> on Tensor-Triangular Geometry. When I'm not doing math, I enjoy watching movies, playing basketball, and discovering new music.
 
-During the academic year 2021-2022 I served as co-president of the <a href=https://mgsa.math.uic.edu/>MGSA</a> alongside a literal hotdog.
 <ul>
-<li> <b> Office: </b> SEO 1321
-<li> <b> E-mail: </b> <b>(a)</b>lways <b>(v)</b>ery <b>(c)</b>lassy <b>(2@uic.edu)</b>. 
+<li> <b> Office: </b> Krieger 211
+<li> <b> E-mail: </b> <b>(a)</b>ffordable  <b>(c)</b>ities <b>(hedal1@uic.edu)</b>. 
 <li> <a href=AnishChedalavadaCV.pdf>Curriculum Vitae</a>
 </ul>
 
 <hr>
 <h3> Research: </h3>
-I am interested in studying homotopy theory and the areas of geometry and algebra with which it interacts. During the academic year 2021-22, I co-organised the <a href=GTSem.html>Graduate Geometry/Topology Seminar</a> (name pending) with Jagerynn Verano. <br>
+I am interested in studying homotopy theory and the areas of geometry and algebra with which it interacts. <br>
 
 <h4> Notes and Talks:</h4>
 
@@ -54,8 +53,12 @@ Any mistakes in the notes below are mine alone. If you consult them for anything
 
 <hr>
 <h3>Teaching:</h3>
+Presently, I am a grader for Math 616 Algebraic Topology and teaching one section of Math 107 Calculus II at JHU.
+
 Past teaching:
+<h4>UIC</h4>
 <ul>
+  <li> Spring 2023: Math 160 (Linear Algebra for Business) and Math 121 (Precalculus)
   <li> Spring 2022: Math 181 (Calculus II)
   <li> Fall 2021: Math 109 (College Algebra Workshop). Feedback padlet <a href=https://padlet.com/avc21/l6qz0ftyxjykezk>here</a>. 
   <li> Summer 2021: Math 090 SEMW
