--- a/index.html
+++ b/index.html
@@ -27,33 +27,26 @@ I am a fourth year PhD student and Teaching Assistant in the Department of Mathe
 
 <hr>
 <h3> Research: </h3>
-I am interested in studying homotopy theory and the areas of geometry and algebra with which it interacts. <br>
+My current research focus is in spectral algebraic geometry and tensor-triangulated geometry. I am broadly interested in homotopy theory and the areas of geometry and algebra with which it interacts. I maintain a list of talks along with notes from various reading seminars that I have participated in <a href=seminars.html>here.</a>
+<br>
 
-<h4> Notes and Talks:</h4>
-
-Any mistakes in the notes below are mine alone. If you consult them for anything and find some, please let me know!
+<h4>In preparation:</h4>
 
 <ul>
-  <li> Fall 2022: "Spherical Witt Vectors and the Construction of E-Theory," Participating Seminar on the Chromatic Nullstellensatz. [<a href=https://drive.google.com/file/d/1hgb8kIsL9OsfxALLxR7qUFqYtY2qV9lB/view?usp=sharing>Notes</a>] [<a href=https://people.tamu.edu/~pvk/nullstellensatz/index.html>Series</a>]
-  <li> Spring 2022: "An Informal Introduction to the Fundamental Group," UIC Undergraduate Math Club Talk. [<a href=https://drive.google.com/file/d/1OKiML6gKelMVKV3U9AgLF3N6Rw96R180/view?usp=sharing>Notes</a>]
-  <li> Spring 2022: "The Grothendieck-Riemann-Roch Theorem," UIC Graduate Algebraic Geometry Seminar. [<a href=https://drive.google.com/file/d/1e8oEP5IRvn-aIxVGoRlOieZvVD3tL6vf/view?usp=sharing>Notes</a>]
-  <li> Fall 2021: "Virtual Fundamental Classes and the Intrinsic Normal Cone," UIC Winter Gromov-Witten Reading Group. [<a href=https://drive.google.com/file/d/1RpdkbL2ILRampVRPuC0Rue7n-vFKSh4p/view?usp=sharing>Notes</a>]
-  <li> Fall 2021: "Spaces and Groupoids," UIC Graduate Geometry/Topology Seminar. [<a href=https://drive.google.com/file/d/1TFKfzQbEVv4nDPftgaemONEztNMQgx5I/view?usp=sharing>Notes</a>]
-  <li> Spring - Summer 2021: "Dundas-Goodwillie-McCarthy 4-5: Derivative of TC, Reduction to Split Square-Zero Extensions," UIC TC Reading Group. [<a href=https://drive.google.com/file/d/1mR_Lr_b4nLvQ5GaulkYVkIJwL5FjqEfA/view?usp=sharing>Notes</a>]
-  <li> Spring 2020: Chapter 1.1.6.8-1.1.6.10 of SAG. [<a href=https://drive.google.com/file/d/1axjy0CX3NWSYVdLf_-vgBckJv9jMOWlq/view>Notes</a>]. Includes Chapter 1.1 of SAG.
-  <li> Fall 2020: "Hecke Operators 2," UIC Winter Modular Forms Reading Group. [<a href=https://drive.google.com/file/d/1TQQtKmkgwDxo8vqkEMbO-7igU02QuhnJ/view?usp=sharing>Notes</a>]
-  <li> Fall 2020: "Genuine Cyclotomic Spectra and Equivalence of TC," UIC TC Reading Group. [<a href=https://drive.google.com/file/d/1EefnWmmIDsisK7ISwnHIaI0EfPdl86tX/view?usp=drivesdk>Notes</a>]
-  <li> Spring 2020: "G-Operads and Operads in G-Spaces," UCLA Seminar on Structured G-Spectra. Notes for the series are <a href=https://drive.google.com/drive/folders/1oAX_i4Cz1TkOaJD9Ir1hmtN5lytB6aOH>here</a>.
-  <li> Winter 2020: "Locally Presentable Stacks and Internal Groupoids," UCLA Seminar on Stacks in Chromatic Homotopy Theory. Notes for the series are <a href=https://drive.google.com/drive/folders/1QT6d_TjA1QaN2EE5M7ttSZKKtITSUbhv?usp=sharing>here</a>.
-  <li> Fall 2019: "Symmetric Monoidal \(\infty\)-Categories," UCLA Seminar on Infinity Categories. Notes for the series are <a href=https://drive.google.com/drive/folders/1LzuibuPAr_KQuBeOwLeVDMQuA_DwfhKy?usp=sharing>here</a>.
-</ul>
+  <li> <i> Derived Reconstruction and Spectral Support Varieties.</i> Draft to be posted here soon.
+</uL>
 
+<h4> Research Talks:</h4>
+
+<ul>
+  <li> "A derived refinement of a classical reconstruction theorem in tt-geometry", Oberwolfach Workshop 2338a: Tensor-Triangular Geometry and Interactions. [<a href=https://drive.google.com/file/d/12Ur6ImVIyC1a2JlqbmZJwe_0i9e91fes/view?usp=sharing>Notes</a>], [<a href=wolfachtalk.pdf>Extended Abstract for Oberwolfach Report</a>].
+</ul>
 
 
 
 <hr>
 <h3>Teaching:</h3>
-Presently, I am a grader for Math 616 Algebraic Topology and teaching one section of Math 107 Calculus II at JHU.
+Presently, I am grading for Math 616 Algebraic Topology and teaching one section of Math 107 Calculus II at JHU.
 
 Past teaching:
 <h4>UIC</h4>
