--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ I am a fourth year PhD student and Teaching Assistant in the Department of Mathe
 <ul>
 <li> <b> Office: </b> Krieger 211
 <li> <b> E-mail: </b> <b>(a)</b>ffordable  <b>(c)</b>ities <b>(hedal1@uic.edu)</b>. 
-<li> <a href=AnishChedalavadaCV.pdf>Curriculum Vitae</a>
+<li> <a href=CV.pdf>Curriculum Vitae</a>
 </ul>
 
 <hr>
