--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ My current research focus is in spectral algebraic geometry and tensor-triangula
 
 <ul>
   <li> <i> Derived Reconstruction and Spectral Support Varieties.</i> Draft to be posted here soon.
+  <li> <i> Higher Geometries and Tensor-Triangular Geometry.</i> Joint work in progress.
 </uL>
 
 <h4> Research Talks:</h4>
