--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title> Anish Chedalavada </title>
-    <script type="text/javascript"
+    <script> type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,12 +10,8 @@
 
 
 <body>
-<p style="float: right; margin-bottom:
-<<<<<<< HEAD
-10px; font-size: 9pt; text-align: center;"><br><img src="Anish.png"  style="margin-bottom: 5px;" width="712" height="445"/><br></p>
-=======
-10px; font-size: 9pt; text-align: center;"><br><img src="Anish.png"  style="margin-bottom: 5px;" width="953" height="598"/><br></p>
->>>>>>> 567b55e (oops)
+<p style="float: right; margin-bottom: 10px; font-size: 9pt; text-align: center;"><br><img src="Anish.png"  style="margin-bottom: 5px;" width="712" height="445"/><br></p>
+
 
 <center><h2>Anish Chedalavada's Homepage</h2></center>
 
@@ -27,11 +23,13 @@ I am a fourth year PhD student and Teaching Assistant in the Department of Mathe
 <li> <b> Office: </b> Krieger 211
 <li> <b> E-mail: </b> <b>(a)</b>ffordable  <b>(c)</b>ities <b>(hedal1@uic.edu)</b>. 
 <li> <a href=CV.pdf>Curriculum Vitae</a>
+<li> <b> E-mail: </b> <b>(a)</b>xolotl  <b>(c)</b>arnivorous <b>(hedal1@jh.edu)</b>. 
+<li> <a href=AnishChedalavadaCV.pdf>Curriculum Vitae</a>
 </ul>
 
 <hr>
 <h3> Research: </h3>
-My current research focus is in spectral algebraic geometry and tensor-triangulated geometry. I am broadly interested in homotopy theory and the areas of geometry and algebra with which it interacts. I maintain a list of talks along with notes from various reading seminars that I have participated in <a href=seminars.html>here.</a>
+My current research focus is in spectral algebraic geometry and tensor-triangulated geometry. I am broadly interested in homotopy theory and the areas of geometry and algebra with which it interacts. 
 <br>
 
 <h4>In preparation:</h4>
@@ -47,13 +45,24 @@ My current research focus is in spectral algebraic geometry and tensor-triangula
   <li> "A derived refinement of a classical reconstruction theorem in tt-geometry", Oberwolfach Workshop 2338a: Tensor-Triangular Geometry and Interactions. [<a href=https://drive.google.com/file/d/12Ur6ImVIyC1a2JlqbmZJwe_0i9e91fes/view?usp=sharing>Notes</a>], [<a href=wolfachtalk.pdf>Extended Abstract for Oberwolfach Report</a>].
 </ul>
 
+<h4>Seminars</h4>
+Past organization:
+<ul>
+  <li> <a href=ESeminar.html>Topics in E-Theory</a>, <b>ongoing</b>.
+  <li> <a href=GTSem.html>UIC Geometry and Topology Seminar</a>, co-organized with Jagerynn Verano, Fall 2021-Spring 2022.
+</ul>
 
+I maintain a list of talks along with notes from various reading seminars that I have participated in <a href=seminars.html>here.</a> 
 
 <hr>
 <h3>Teaching:</h3>
-Presently, I am grading for Math 616 Algebraic Topology and teaching one section of Math 107 Calculus II at JHU.
 
 Past teaching:
+<h4>JH</h4>
+<ul>
+  <li> Fall 2023: Grader for Math 616 Algebraic Topology, TA for Math 107  
+</ul>
+
 <h4>UIC</h4>
 <ul>
   <li> Spring 2023: Math 160 (Linear Algebra for Business) and Math 121 (Precalculus)
