--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <hr>
 <h3> About Me: </h3> 
-I am a fourth year PhD student and Teaching Assistant in the Department of Mathematics at Johns Hopkins. For Fall Semester 2022, I was at the <a href=https://www.him.uni-bonn.de/programs/current-trimester-program/spectral-methods/description/>Hausdorff Research Institute Trimester</a> on Tensor-Triangular Geometry. When I'm not doing math, I enjoy watching movies, playing basketball, and discovering new music.
+I am a fourth year PhD student and Teaching Assistant in the Department of Mathematics at Johns Hopkins. For April-May 2024, I am a visiting member of the <a href=https://www.mpim-bonn.mpg.de>Max Planck Institute</a> in Bonn.
 
 <ul>
 <li> <b> Office: </b> Krieger 211
