--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 <body>
-<p style="float: right; margin-bottom: 10px; font-size: 9pt; text-align: center;"><br><img src="Anish.png"  style="margin-bottom: 5px;" width="712" height="445"/><br></p>
+<p style="float: right; margin-bottom: 10px; font-size: 9pt; text-align: center;"><br><img src="Untitled.jpg"  style="margin-bottom: 5px;" width="712" height="445"/><br></p>
 
 
 <center><h2>Anish Chedalavada's Homepage</h2></center>
@@ -33,7 +33,8 @@ My current research focus is in spectral algebraic geometry and tensor-triangula
 <h4>In preparation:</h4>
 
 <ul>
-  <li> <i> Derived Reconstruction and Spectral Support Varieties.</i> Draft to be posted here soon.
+  <li> <i> A Splitting of the Assembly Map in the Equivariant K-Theory of Spaces. </i> Joint work in progress.
+  <li> <i> Derived Reconstruction and Spectral Support Varieties.</i> 
   <li> <i> Higher Geometries and Tensor-Triangular Geometry.</i> Joint work in progress.
 </uL>
 
