First preprint out

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title> Anish Chedalavada </title>
-    <script> type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
+    <script type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
     </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="gvkAwMfn64uyWEwTp1eC5opRQ_fWeEMd8VNHOQ8_NqU" />
@@ -18,7 +18,7 @@
 
 <hr>
 <h3> About Me: </h3> 
-I am a fourth year PhD student and Teaching Assistant in the Department of Mathematics at Johns Hopkins. For April-May 2024, I am a visiting member of the <a href=https://www.mpim-bonn.mpg.de>Max Planck Institute</a> in Bonn.
+I am a fifth year PhD student and Teaching Assistant in the Department of Mathematics at Johns Hopkins.
 
 <ul>
 <li> <b> Office: </b> Krieger 211
@@ -31,28 +31,32 @@ I am a fourth year PhD student and Teaching Assistant in the Department of Mathe
 My current research focus is in spectral algebraic geometry and tensor-triangulated geometry. I am broadly interested in homotopy theory and the areas of geometry and algebra with which it interacts. 
 <br>
 
+<h4>Preprints:</h4>
+<ol>
+<li><details><summary> <i><b> <a href=https://arxiv.org/abs/2508.11621>Higher Zariski geometry</a></i></b>, joint with Ko Aoki, Tobias Barthel, Tomer Schlank, and Greg Stevenson.</summary><ul> <font color="#6B6B6B"> We revisit the classical constructions of tensor-triangular geometry in the setting of stably symmetric monoidal idempotent-complete \(\infty\)-categories, henceforth referred to as 2-rings. In this setting, we produce a Zariski topology, a Zariski spectrum, a category of locally 2-ringed spaces (more generally \infty-topoi), and an affine spectrum-global sections adjunction, based on the framework of "\(\infty\)-topoi with geometric structure" as developed by Lurie in [<a href=https://arxiv.org/abs/0905.0459>DAGV</a>]. Using work of Kock and Pitsch, we compute that the underlying space of the Zariski spectrum of a 2-ring recovers the Balmer spectrum of its homotopy category. These constructions mirror the analogous structures in the classical Zariski geometry of commutative rings (and commutative ring spectra), and we also demonstrate additional compatibility between classical Zariski and higher Zariski geometry. For rigid 2-rings, we show that the descent results of Balmer and Favi admit coherent enhancements. As a corollary, we obtain that the Zariski spectrum fully faithfully embeds rigid 2-rings into locally 2-ringed \infty-topoi. In an appendix, we prove a ``stalk-locality principle'' for the telescope conjecture in the rigid setting, extending earlier work of Hrbek. </font> </ul></details> 
+</ol>
+
+
 <h4>In preparation:</h4>
 
 <ul>
-  <li> <i> A Splitting of the Assembly Map in the Equivariant K-Theory of Spaces. </i> Joint work in progress.
-  <li> <i> Derived Reconstruction and Spectral Support Varieties.</i> 
-  <li> <i> Higher Geometries and Tensor-Triangular Geometry.</i> Joint work in progress.
-</uL>
+  <li> <i> Affineness and reconstruction in higher Zariski geometry. </i> 
+  <li> <i> A splitting of the assembly map for the equivariant K-theory of spaces, </i> joint with Maxine Calle, David Chan, and Andres Mejia.
+</ul>
 
 <h4> Research Talks:</h4>
 
-<ul>
-  <li> "A derived refinement of a classical reconstruction theorem in tt-geometry", Oberwolfach Workshop 2338a: Tensor-Triangular Geometry and Interactions. [<a href=https://drive.google.com/file/d/12Ur6ImVIyC1a2JlqbmZJwe_0i9e91fes/view?usp=sharing>Notes</a>], [<a href=wolfachtalk.pdf>Extended Abstract for Oberwolfach Report</a>].
-</ul>
+<ol>
+  <li> <i>A derived refinement of a classical reconstruction theorem in tt-geometry</i>, Oberwolfach Workshop 2338a: Tensor-Triangular Geometry and Interactions. [<a href=https://drive.google.com/file/d/12Ur6ImVIyC1a2JlqbmZJwe_0i9e91fes/view?usp=sharing>Notes</a>], [<a href=wolfachtalk.pdf>Extended Abstract for Oberwolfach Report</a>].
+</ol>
 
-<h4>Seminars</h4>
+<!--<h4>Seminars</h4>
 Past organization:
 <ul>
   <li> <a href=ESeminar.html>Topics in E-Theory</a>, <b>ongoing</b>.
   <li> <a href=GTSem.html>UIC Geometry and Topology Seminar</a>, co-organized with Jagerynn Verano, Fall 2021-Spring 2022.
-</ul>
+</ul>-->
 
-I maintain a list of talks along with notes from various reading seminars that I have participated in <a href=seminars.html>here.</a> 
 
 <hr>
 <h3>Teaching:</h3>
@@ -74,6 +78,12 @@ Past teaching:
 </ul>
 <hr>
 
+<h3>Notes:</h3>
+
+I maintain a list of talks along with notes from various reading seminars that I have participated in <a href=seminars.html>here.</a> 
+
+<hr>
+
 <h3>Important Links:</h3>
 
 <ul>
@@ -88,15 +98,15 @@ Past teaching:
 
 <hr>
 
-<h3>Other Stuff:</h3>
+<!--<h3>Other Stuff:</h3>
 
-<ul>
+%%<ul>
   <li> <a href=subscriptions.opml> What's on my feed </a>
   <li> <a href=reading.html> Interesting articles and other curiosities (mathematics and otherwise)</a>
   <li> Friends: <a href=https://www.math.ucla.edu/~jas/>Jas Singh</a>, <a href=https://sites.google.com/view/ebwang/home>Eric Wang</a>, <a href=https://sites.google.com/view/sharonzhen/home>Sharon Zhen</a>, <a href=https://nchrist5.people.uic.edu/>a literal hotdog</a>, <a href=http://homepages.math.uic.edu/~jhafer2/index.html>Jack Burke</a>, <a href=https://swalla24.people.uic.edu/>Sam Wallace</a>, <a href=https://katiekruzan.com/>Katie Kruzan</a>, <a href=https://www.vigj.net/>The MGSA Heavyweight Champion</a>, <a href=https://kaythmp.github.io/>Kay Thompson</a>
 </ul>
 
-<hr>
+<hr> -->
 
 <!--\(\LaTeX \) enabled-->
 </body>
