updated for courses

--- a/index.html
+++ b/index.html
@@ -64,17 +64,19 @@ Past organization:
 Past teaching:
 <h4>JH</h4>
 <ul>
-  <li> Fall 2023: Grader for Math 616 Algebraic Topology, TA for Math 107  
+  <li> Fall 2025: Instructor for AS.110.113 Honors Single-Variable Calculus
+  <li> Fall 2024: Instructor for AS.110.225 Putnam Problem Solving Lab
+  <li> Fall 2023: Grader for AS 110.616 Algebraic Topology, TA for AS 110.107 Calculus II for Life Sciences
 </ul>
 
 <h4>UIC</h4>
 <ul>
-  <li> Spring 2023: Math 160 (Linear Algebra for Business) and Math 121 (Precalculus)
-  <li> Spring 2022: Math 181 (Calculus II)
-  <li> Fall 2021: Math 109 (College Algebra Workshop). Feedback padlet <a href=https://padlet.com/avc21/l6qz0ftyxjykezk>here</a>. 
-  <li> Summer 2021: Math 090 SEMW
-  <li> Spring 2021: Math 125 (Elementary Linear Algebra for Business) 
-  <li> Fall 2020: Math 181 (Calc II) 
+  <li> Spring 2023: TA for Math 160 Linear Algebra for Business and Math 121 (Precalculus)
+  <li> Spring 2022: TA for Math 181 (Calculus II)
+  <li> Fall 2021: Instructor for Math 109 (College Algebra Workshop). Feedback padlet <a href=https://padlet.com/avc21/l6qz0ftyxjykezk>here</a>. 
+  <li> Summer 2021: Instructor for Math 090 SEMW (College Algebra)
+  <li> Spring 2021: TA for Math 125 (Elementary Linear Algebra for Business) 
+  <li> Fall 2020: TA for Math 181 (Calc II) 
 </ul>
 <hr>
 
